--- a/public/css/app.css
+++ b/public/css/app.css
@@ -658,11 +658,6 @@ video {
   margin-bottom: 0.25rem;
 }
 
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
@@ -850,10 +845,6 @@ video {
   height: 100%;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
 .max-h-20 {
   max-height: 5rem;
 }
@@ -880,10 +871,6 @@ video {
 
 .w-2\/3 {
   width: 66.666667%;
-}
-
-.w-2\/4 {
-  width: 50%;
 }
 
 .w-20 {
@@ -1429,6 +1416,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2018,11 +2010,11 @@ video {
     margin-right: 0.75rem;
   }
 
-  .md\:mb-0 {
-    margin-bottom: 0px;
+  .md\:w-1\/2 {
+    width: 50%;
   }
 
-  .md\:w-1\/2 {
+  .md\:w-2\/4 {
     width: 50%;
   }
 
@@ -2036,10 +2028,6 @@ video {
 
   .md\:w-full {
     width: 100%;
-  }
-
-  .md\:w-2\/4 {
-    width: 50%;
   }
 
   .md\:flex-row {
