--- a/public/css/app.css
+++ b/public/css/app.css
@@ -909,6 +909,22 @@ video {
   width: 100vw;
 }
 
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-2\/4 {
+  width: 50%;
+}
+
+.w-2\/5 {
+  width: 40%;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -999,6 +1015,10 @@ video {
 
 .gap-7 {
   gap: 1.75rem;
+}
+
+.gap-20 {
+  gap: 5rem;
 }
 
 .gap-y-10 {
@@ -1351,6 +1371,10 @@ video {
 
 .leading-\[48px\] {
   line-height: 48px;
+}
+
+.leading-5 {
+  line-height: 1.25rem;
 }
 
 .text-blue-500 {
@@ -2045,6 +2069,10 @@ video {
     width: 100%;
   }
 
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -2124,6 +2152,10 @@ video {
     width: 100%;
   }
 
+  .lg\:w-2\/3 {
+    width: 66.666667%;
+  }
+
   .lg\:scale-0 {
     --tw-scale-x: 0;
     --tw-scale-y: 0;
@@ -2132,6 +2164,10 @@ video {
 
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
   }
 
   .lg\:flex-nowrap {
